# crash-reporter-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  metadata_validation.py  security.py
app/db/: mongo.py  sql.py
app/documents/: report.py
app/models/: __init__.py  instance.py  project.py  user.py
app/schemas/: auth.py  instance.py  project.py  report.py  user.py
openapi/: openapi-clients.json  openapi.json
scripts/: create_admin.py  create_user.py  export_openapi.py  filter_openapi_for_clients.py  generate_clients.sh
tests/: test_client_openapi_scope.py  test_metadata_validation.py  test_pagination.py  test_security.py  test_sorting.py
